Fixed letter text alignment and image size

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: pink;
+    background-color: rgb(255, 214, 221);
     text-align: center;
     font-family: Arial, sans-serif;
 }
